<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_vachanakara"
      android:orderInCategory="10"
      android:title="@string/action_vachanakara"
      />
  <item
      android:id="@+id/action_vachanagalu"
      android:orderInCategory="10"
      android:title="@string/action_vachanagalu"
      />
  <item
      android:id="@+id/action_contact"
      android:orderInCategory="100"
      android:title="@string/action_contact"
      />
  <item
      android:id="@+id/action_feedback"
      android:orderInCategory="100"
      android:title="@string/action_feedback"
      />
  <item
      android:id="@+id/action_about"
      android:orderInCategory="100"
      android:title="@string/action_about"
      />
</menu>
